* Sun Nov 22 2020 <gerbier@users.sourceforge.net> 2.16-1
- fix bug if more than 10 args (thanks Dmitry V. Levin)
- add signal trapping to clean directory
- fix warnings from shellcheck
- fix problem when rebuild filesystem package (builroot not a directory)

* Fri Feb 21 2020 <gerbier@users.sourceforge.net> 2.15-1
- fix error on rpmrebuild_files.sh line 204 (verify tag)
- use env in shebang to avoid path problemes (/bin versus /usr/bin)
- updated htmc doc (features, usage)
- avoid shebang translation for rpmrebuild packages (__brp_mangle_shebangs macro)
- fix bug on change-spec-preamble (move processing_init before CommandLineParsing) thanks Nerijus
- fix cpio problem : add --no-absolute-filenames option
- better diagnostic on internal error
- fix bug on conditional requires (with space)

* Fri Oct 19 2018 <gerbier@users.sourceforge.net> 2.14-1
- add list of optional tags, to allow rpmrebuild work with old rpm versions
- add dependency on setarch
- add debug code (calls on functions)
- use local variables to avoid conflicts
- rewrite html target in Makefile
- suppress VERSION (use Version)
- add comments in rpmrebuild_rpmqf.src to avoid bad syntax after GenRpmQf
- test if awk support non-posix lshift (qf_spec_requires_raw)
- workaround for redhat 6.x / rpm 3.x, thanks Francesco

* Wed Sep 12 2018 <gerbier@users.sourceforge.net> 2.13-1
- can handle recommends / supplements rpm tags

* Fri Jul 20 2018 <gerbier@users.sourceforge.net> 2.12-1
- apply patch from Bruce Jerrick : Handle Requires(pre,post,preun,postun)
- add new requires syntax with if ( redhat-rpm-config )

* Sun Jun 10 2018 <gerbier@users.sourceforge.net> 2.11-3
- Made minor grammatical fixes to English language translations (patch from beroset)

* Sun Sep 10 2017 <gerbier@users.sourceforge.net> 2.11-2
- fix bad day of week in changelog (rpmbuild warning)
- add dependency to rpm-build package instead rpmbuild binary

* Fri Nov 22 2013 <gerbier@users.sourceforge.net> 2.11
- add install option
